--- a/day-14/simple-python-app/buildspec.yml
+++ b/day-14/simple-python-app/buildspec.yml
@@ -2,33 +2,29 @@ version: 0.2
 
 env:
   parameter-store:
-    DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
-    DOCKER_REGISTRY_PASSWORD: /myapp/docker-credentials/password
-    DOCKER_REGISTRY_URL: /myapp/docker-registry/url
+    DOCKER_USER: /myapp/docker-credentials/username
+    DOCKER_PASS: /myapp/docker-credentials/password
+
+
 phases:
   install:
     runtime-versions:
       python: 3.11
+  
   pre_build:
     commands:
-      - echo "Installing dependencies..."
-      - pip install -r day-13/simple-python-app/requirements.txt
-
-      - echo "Logging into DockerHub"
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin docker.io
-      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_NAME=$DOCKER_REGISTRY_USERNAME/simple-python-flask-app
-      
+      - pip install -r day-14/simple-python-app/requirements.txt
   build:
     commands:
-      - echo "Building Docker image"
-      - docker build -t $IMAGE_NAME:$IMAGE_TAG .
+      - cd day-14/simple-python-app
+      - echo "Building docker image"
+      - docker build -t "$DOCKER_USER/my_app:latest" .
+      - echo "pushing docker image to github"
+      - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+      - docker push "$DOCKER_USER/my_app:latest"
       
   post_build:
     commands:
-      - echo "Pushing Docker image"
-      - docker push $IMAGE_NAME:$IMAGE_TAG
-      - echo "Build completed successfully!"
-
-
-
+      - echo "build Successful"
+      
+      - echo "Resolved DOCKER_USER=$DOCKER_USER"
